<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.smide</groupId>
    <artifactId>smide-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>smIDE</name>
    <description>A software development IDE in the JetBrains mould, with MDViewer's feel</description>

    <modules>
        <module>smide-api</module>
        <module>smide-core</module>
        <module>plugins</module>
        <module>smide-dist</module>
        <!-- Not part of the IDE: the server its crash reports can be sent to. -->
        <module>smide-crash-server</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>

        <javafx.version>21</javafx.version>
        <richtextfx.version>0.11.4</richtextfx.version>
        <ikonli.version>12.3.1</ikonli.version>
        <gson.version>2.11.0</gson.version>
        <lsp4j.version>0.24.0</lsp4j.version>
        <commons-compress.version>1.27.1</commons-compress.version>
        <maven-model.version>3.9.9</maven-model.version>
        <jgit.version>6.10.0.202406032230-r</jgit.version>
        <pty4j.version>0.13.4</pty4j.version>
        <jediterm.version>3.47</jediterm.version>
        <mdviewer.version>1.1.1</mdviewer.version>
        <junit.version>5.11.4</junit.version>
    </properties>

    <!--
        MDViewer, whose renderer draws the Markdown editor and the assistant's answers and
        whose client the assistant sends through, is published to GitHub Packages rather
        than Maven Central.

        GitHub's Maven registry authenticates reads as well as writes, so this needs a
        token with read:packages in your ~/.m2/settings.xml under the id below. INSTALL.md
        section 2 has the four lines. Without it the build stops on
        com.mdviewer:mdviewer:jar - the artifact is there, the request is anonymous.
    -->
    <repositories>
        <repository>
            <id>github-mdviewer</id>
            <name>GitHub Packages - mainul35/markdown-viewer</name>
            <url>https://maven.pkg.github.com/mainul35/markdown-viewer</url>
            <releases><enabled>true</enabled></releases>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.smide</groupId>
                <artifactId>smide-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smide</groupId>
                <artifactId>smide-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.fxmisc.richtext</groupId>
                <artifactId>richtextfx</artifactId>
                <version>${richtextfx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-javafx</artifactId>
                <version>${ikonli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-feather-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kordamp.ikonli</groupId>
                <artifactId>ikonli-materialdesign2-pack</artifactId>
                <version>${ikonli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.lsp4j</groupId>
                <artifactId>org.eclipse.lsp4j</artifactId>
                <version>${lsp4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.lsp4j</groupId>
                <artifactId>org.eclipse.lsp4j.debug</artifactId>
                <version>${lsp4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons-compress.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-model</artifactId>
                <version>${maven-model.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jgit</groupId>
                <artifactId>org.eclipse.jgit</artifactId>
                <version>${jgit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.pty4j</groupId>
                <artifactId>pty4j</artifactId>
                <version>${pty4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mdviewer</groupId>
                <artifactId>mdviewer</artifactId>
                <version>${mdviewer.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>21</release>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>exec-maven-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
